update css error button

--- a/Projet_1/TP_01/templates/error.html
+++ b/Projet_1/TP_01/templates/error.html
@@ -15,6 +15,6 @@
 </div>
 
 
-<button><a href="/liste">Retourner à la liste de livres</a></button>
+<a href="/liste" ><button class="btn btn-outline-dark g-col-6 w-25 p-2">Retour</button></a>
 
 {% endblock %}
