--- a/Projet_1/TP_01/templates/save_book.html
+++ b/Projet_1/TP_01/templates/save_book.html
@@ -1,9 +1,21 @@
 {% extends "index.html" %}
 
 {% block content %}
+<ul class="nav nav-tabs justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link link-body-emphasis" href="/liste">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/save">Ajouter</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-body-emphasis" href="/modify">Modifier</a>
+    </li>
+    
+</ul><br>
 
 <form action="/save" method="post" class = "container">
-    <h1>Ajouter un nouveau livre</h1><br>
+    <h1 class = "display-6 text-center">Ajouter un nouveau livre</h1><br>
 
     <div class="input-group mb-3">
         <label for="book_name" class="input-group-text">Nom du livre</label>
@@ -26,7 +38,7 @@
     <div class="d-flex justify-content-between">
         <a href="/liste"><button type="button" class="btn btn-outline-dark p-2 rounded-circle" > Retour </button></a>
         <button type="submit" class="btn btn-outline-dark rounded-circle">Suivant</button>  
-        <th> Nombres de livres : {{Nombre}} </th>      
+        <h5> Nombres de livres : {{Nombre}} </h5>      
 
     </div>    
 </form>
