--- a/Projet_1/TP_01/templates/index.html
+++ b/Projet_1/TP_01/templates/index.html
@@ -9,12 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
   </head> 
   <body> 
-    <h1 class="display-1 text-center">Library</h1> 
-    <ul>
-      <li><a href="/liste">Home</a></li>
-      <li><a href="/save">Ajouter</a></li>
-      <li><a href="/modify">Modifier</a></li>
-    </ul>
+    <h1 class="display-1 text-center">Library</h1><br>
     {% block content %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
