--- a/Projet_1/TP_01/templates/modify.html
+++ b/Projet_1/TP_01/templates/modify.html
@@ -2,9 +2,21 @@
 {% from "book_macro.html" import show_books %}
 
 {% block content %}
+<ul class="nav nav-tabs justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link link-body-emphasis" href="/liste">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-body-emphasis" href="/save">Ajouter</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/modify">Modifier</a>
+    </li>
+    
+</ul><br>
 
 <div class="container">
-    <table class="table">
+    <table class="table table-hover">
         <tr>
             <th>Id</th>
             <th>Nom</th>
@@ -46,8 +58,8 @@
                 name="Editor" required="true" placeholder="LPG"/>
         </div>
         <div class="grid text-center">
-            <a href="/liste"><button type="button" class="btn btn-outline-dark p-2 rounded-circle">Retour </button></a>
-            <button type="submit" class="btn btn-outline-dark p-2 rounded-circle">Modifier le livre</button>
+            <a href="/liste"><button type="button" class="btn btn-outline-dark p-2 rounded-circle">Retour</button></a>
+            <button type="submit" class="btn btn-outline-dark p-2 rounded-circle">Modifier</button>
         </div>
 
     </form>
