--- a/TP_02/templates/books.html
+++ b/TP_02/templates/books.html
@@ -38,6 +38,8 @@
     
     </div>
 </div>
+{{current_user}}
+{%if current_user.group == "admin"%}
 <div class = "container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%">
 <h2 class = "display-6 text-center">Supprimer un livre</h2><br>
     <form action="/liste" method="post">
@@ -46,5 +48,6 @@
         </label>
     </form>
 </div>
+{%endif%}
 
 {% endblock %}
