fin système login + début page admin

--- a/TP_02/templates/login.html
+++ b/TP_02/templates/login.html
@@ -16,7 +16,14 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Se connecter</button>
             </form>
+            <p class="text-center">Pas encore de compte ? <a href="/register">Inscrivez-vous</a></p>
         </div>
+        {% if message != "None" %}
+        <div class="alert alert-danger" role="alert">
+            {{message}}
+        </div>
+        {% endif %}
     </div>
+</div>
 
 {% endblock %}
