--- a/TP_02/templates/books.html
+++ b/TP_02/templates/books.html
@@ -7,12 +7,17 @@
     <li class="nav-item">
       <a class="nav-link active" href="/liste">Home</a>
     </li>
+    {%if current_user.group == "admin"%}
     <li class="nav-item">
       <a class="nav-link link-body-emphasis" href="/save">Ajouter</a>
     </li>
     <li class="nav-item">
       <a class="nav-link link-body-emphasis" href="/modify">Modifier</a>
     </li>
+    <li class = "nav-item">
+        <a class = "nav-link link-body-emphasis" href="/administration">Admin</a>
+    </li>
+    {%endif%}
     
 </ul><br>
 
