--- a/TP_02/templates/error.html
+++ b/TP_02/templates/error.html
@@ -26,6 +26,6 @@
       </div>
       
       
-      <a href="/login" ><button class="btn btn-outline-dark g-col-6 w-25 p-2">Retour</button></a>
+      <a href="/{{url}}" ><button class="btn btn-outline-dark g-col-6 w-25 p-2">Retour</button></a>
   </body>
 </html>
