--- a/TP_02/templates/login.html
+++ b/TP_02/templates/login.html
@@ -7,8 +7,8 @@
             <h2 class="text-center">Connexion</h2>
             <form action="/login" method="post">
                 <div class="mb-3">
-                    <label for="username" class="form-label">Nom d'utilisateur</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
+                    <label for="email" class="form-label">Email</label>
+                    <input type="text" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Mot de passe</label>
@@ -19,7 +19,7 @@
             <p class="text-center">Pas encore de compte ? <a href="/register">Inscrivez-vous</a></p>
         </div>
         {% if message != "None" %}
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-success" role="alert">
             {{message}}
         </div>
         {% endif %}
