--- a/TP_02/templates/modify.html
+++ b/TP_02/templates/modify.html
@@ -2,6 +2,9 @@
 {% from "book_macro.html" import show_books %}
 
 {% block content %}
+<form action="/logout" method="post">
+    <button type="submit" class="btn btn-danger">Logout</button>
+</form>  
 <ul class="nav nav-tabs justify-content-center">
     <li class="nav-item">
       <a class="nav-link link-body-emphasis" href="/liste">Home</a>
@@ -11,6 +14,9 @@
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="/modify">Modifier</a>
+    </li>
+    <li class = "nav-item">
+        <a class = "nav-link link-body-emphasis" href="/administration">Admin</a>
     </li>
     
 </ul><br>
@@ -55,7 +61,7 @@
         <div class="input-group mb-3">
             <label for="book_editor" class="input-group-text">Nouvel editeur</label>
             <input type="text" id="book_editor" class="form-control"
-                name="Editor" required="true" placeholder="LPG"/>
+                name="Editor" placeholder="LPG"/>
         </div>
         <div class="grid text-center">
             <a href="/liste"><button type="button" class="btn btn-outline-dark p-2 rounded-circle">Retour</button></a>
