--- a/TP_02/templates/modify.html
+++ b/TP_02/templates/modify.html
@@ -4,68 +4,31 @@
 {% block content %}
 <form action="/logout" method="post">
     <button type="submit" class="btn btn-danger">Logout</button>
-</form>  
-<ul class="nav nav-tabs justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link link-body-emphasis" href="/liste">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link link-body-emphasis" href="/save">Ajouter</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="/modify">Modifier</a>
-    </li>
-    <li class = "nav-item">
-        <a class = "nav-link link-body-emphasis" href="/administration">Admin</a>
-    </li>
-    
-</ul><br>
+</form><br>
 
-<div class="container">
-    <table class="table table-hover">
-        <tr>
-            <th>Id</th>
-            <th>Nom</th>
-            <th>Auteur</th>
-            <th>Editeur</th>
-        </tr>
-        {% for book in books %}
-            {{ show_books(book.id, book.name, book.Author, book.Editor) }}
-        {% endfor %}
-
-        <th colspan="4">Nombre de livres : {{Nombre}}</th>
-    </table> 
-</div>
-<br>
 <div class="container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%">
     <h2 class = "display-6 text-center">Modifier le livre</h2><br>
-    <form action="/modify" method="post">
+    <form action="/modify/{{book.id}}" method="post">
         <div class="input-group mb-3">
-            <label for="book_name" class="input-group-text">Id</label>
+            <label for="book_name" class="input-group-text">Nom</label>
             <input type="text"  id="book_name" class="form-control"
-                name="id" required="true"/>
+                name="name" value="{{book.name}}" required="true"/>
         </div>
 
         <div class="input-group mb-3">
-            <label for="book_name" class="input-group-text">Nouveau nom</label>
-            <input type="text"  id="book_name" class="form-control"
-                name="name" placeholder="Percy Jackson et le voleur de foudre" required="true"/>
-        </div>
-
-        <div class="input-group mb-3">
-            <label for="book_author" class="input-group-text">Nouvel auteur</label>
+            <label for="book_author" class="input-group-text">Auteur</label>
             <input type="text" id="book_auhtor" class="form-control"
-                name="Author" required="true" placeholder="Rick Riordan"/>
+                name="Author" required="true" value="{{book.Author}}"/>
         </div>
 
         <div class="input-group mb-3">
-            <label for="book_editor" class="input-group-text">Nouvel editeur</label>
+            <label for="book_editor" class="input-group-text">Editeur</label>
             <input type="text" id="book_editor" class="form-control"
-                name="Editor" placeholder="LPG"/>
+                name="Editor" value="{{book.Editor}}"/>
         </div>
         <div class="grid text-center">
-            <a href="/liste"><button type="button" class="btn btn-outline-dark p-2 rounded-circle">Retour</button></a>
-            <button type="submit" class="btn btn-outline-dark p-2 rounded-circle">Modifier</button>
+            <a href="/liste"><button type="button" class="btn btn-outline-dark">Annuler</button></a>
+            <button type="submit" class="btn btn-outline-dark">Confirmer</button>
         </div>
 
     </form>
