--- a/TP_02/templates/modify.html
+++ b/TP_02/templates/modify.html
@@ -2,9 +2,11 @@
 {% from "book_macro.html" import show_books %}
 
 {% block content %}
-<form action="/logout" method="post">
-    <button type="submit" class="btn btn-danger">Logout</button>
-</form><br>
+<div style="position: absolute; top: 10px; right: 10px;">
+    <form action="/logout" method="post">
+      <button class="btn btn-danger" type="submit">Logout</button>
+    </form>
+</div><br>
 
 <div class="container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%">
     <h2 class = "display-6 text-center">Modifier le livre</h2><br>
