--- a/TP_02/templates/error.html
+++ b/TP_02/templates/error.html
@@ -1,31 +1,41 @@
-
 <!DOCTYPE html> 
 <html> 
   
   <head> 
+    <!-- Head section -->
     {% block title %}
-    <title >La Librairie</title>
+    <title>La Librairie</title>
     {% endblock %}
     <link rel="stylesheet" href="/static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
-  </head> 
-  <body> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </head>
 
+  <body> 
+    <!-- Body section -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <div>
+      <!-- Division for error message -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+          <!-- Hidden SVG icon -->
           <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+            <!-- Symbol for warning icon -->
             <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            <!-- Path for warning icon -->
           </symbol>
         </svg>
       <div class="alert alert-warning d-flex align-items-center" role="alert">
         <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
         <div>
           {{ code }} {{ description }}
+          <!-- Display error code and description -->
         </div>
       </div>
-      
-      
-      <a href="/{{url}}" ><button class="btn btn-outline-dark g-col-6 w-25 p-2">Retour</button></a>
+
+      <a href="/{{url}}" >
+        <!-- Link to specified URL -->
+        <button class="btn btn-outline-dark g-col-6 w-25 p-2">Retour</button>
+        <!-- Button for returning to URL -->
+      </a>
+    </div>
   </body>
 </html>
